<?xml version="1.0"?>
<package>
  <name>baxter_artist</name>
  <version>0.0.1</version>
  <description>
    ARTIST pipeline for Baxter jazz improvisatoin.
  </description>

  <maintainer email="jason.brooks@yale.edu">
    Jason Brooks
  </maintainer>
  <maintainer email="charles.proctor@yale.edu">
    Charlie Proctor
  </maintainer>
  <maintainer email="k.jiang@yale.edu">
    Kevin Jiang
  </maintainer>
  <license>BSD</license>
  <url type="repository">
    https://github.com/jasonsbrooks/ARTIST
  </url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>

</package>
